--- a/index.html
+++ b/index.html
@@ -61,272 +61,7 @@
       </nav>
     </div>
     <div class="container bg-white my-3">
-      <div class="row">
-        <div class="col-md-3 py-4">
-          <div class="col-10">
-            <img
-              src="./images/1566405003-uniqlo-tee-1566404997.jpg"
-              alt="Shirt Image"
-              class="w-100 image"
-            />
-            <div class="text-primary text-center" style="font-size: 1.5rem">
-              Happy Ninja
-            </div>
-            <div class="container text-center">
-              <span data-id="1" id="1" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="2" id="2" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="3" id="3" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="4" id="4" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="5" id="5" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-            </div>
-            <div class="container text-center"><b>$10,.00</b></div>
-            <div class="container text-center">
-              <button class="btn btn-dark">Add to cart</button>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 py-4">
-          <div class="col-10">
-            <img
-              src="./images/1566405003-uniqlo-tee-1566404997.jpg"
-              alt="Shirt Image"
-              class="w-100 image"
-            />
-            <div class="text-primary text-center" style="font-size: 1.5rem">
-              Happy Ninja
-            </div>
-            <div class="container text-center">
-              <span data-id="1" id="1" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="2" id="2" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="3" id="3" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="4" id="4" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="5" id="5" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-            </div>
-            <div class="container text-center"><b>$10,.00</b></div>
-            <div class="container text-center">
-              <button class="btn btn-dark">Add to cart</button>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 py-4">
-          <div class="col-10">
-            <img
-              src="./images/1566405003-uniqlo-tee-1566404997.jpg"
-              alt="Shirt Image"
-              class="w-100 image"
-            />
-            <div class="text-primary text-center" style="font-size: 1.5rem">
-              Happy Ninja
-            </div>
-            <div class="container text-center">
-              <span data-id="1" id="1" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="2" id="2" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="3" id="3" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="4" id="4" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="5" id="5" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-            </div>
-            <div class="container text-center"><b>$10,.00</b></div>
-            <div class="container text-center">
-              <button class="btn btn-dark">Add to cart</button>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 py-4">
-          <div class="col-10">
-            <img
-              src="./images/1566405003-uniqlo-tee-1566404997.jpg"
-              alt="Shirt Image"
-              class="w-100 image"
-            />
-            <div class="text-primary text-center" style="font-size: 1.5rem">
-              Happy Ninja
-            </div>
-            <div class="container text-center">
-              <span data-id="1" id="1" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="2" id="2" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="3" id="3" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="4" id="4" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="5" id="5" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-            </div>
-            <div class="container text-center"><b>$10,.00</b></div>
-            <div class="container text-center">
-              <button class="btn btn-dark">Add to cart</button>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 py-4">
-          <div class="col-10">
-            <img
-              src="./images/1566405003-uniqlo-tee-1566404997.jpg"
-              alt="Shirt Image"
-              class="w-100 image"
-            />
-            <div class="text-primary text-center" style="font-size: 1.5rem">
-              Happy Ninja
-            </div>
-            <div class="container text-center">
-              <span data-id="1" id="1" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="2" id="2" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="3" id="3" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="4" id="4" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="5" id="5" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-            </div>
-            <div class="container text-center"><b>$10,.00</b></div>
-            <div class="container text-center">
-              <button class="btn btn-dark">Add to cart</button>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 py-4">
-          <div class="col-10">
-            <img
-              src="./images/1566405003-uniqlo-tee-1566404997.jpg"
-              alt="Shirt Image"
-              class="w-100 image"
-            />
-            <div class="text-primary text-center" style="font-size: 1.5rem">
-              Happy Ninja
-            </div>
-            <div class="container text-center">
-              <span data-id="1" id="1" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="2" id="2" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="3" id="3" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="4" id="4" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="5" id="5" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-            </div>
-            <div class="container text-center"><b>$10,.00</b></div>
-            <div class="container text-center">
-              <button class="btn btn-dark">Add to cart</button>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 py-4">
-          <div class="col-10">
-            <img
-              src="./images/1566405003-uniqlo-tee-1566404997.jpg"
-              alt="Shirt Image"
-              class="w-100 image"
-            />
-            <div class="text-primary text-center" style="font-size: 1.5rem">
-              Happy Ninja
-            </div>
-            <div class="container text-center">
-              <span data-id="1" id="1" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="2" id="2" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="3" id="3" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="4" id="4" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="5" id="5" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-            </div>
-            <div class="container text-center"><b>$10,.00</b></div>
-            <div class="container text-center">
-              <button class="btn btn-dark">Add to cart</button>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 py-4">
-          <div class="col-10">
-            <img
-              src="./images/1566405003-uniqlo-tee-1566404997.jpg"
-              alt="Shirt Image"
-              class="w-100 image"
-            />
-            <div class="text-primary text-center" style="font-size: 1.5rem">
-              Happy Ninja
-            </div>
-            <div class="container text-center">
-              <span data-id="1" id="1" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="2" id="2" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="3" id="3" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="4" id="4" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-              <span data-id="5" id="5" class="reviews"
-                ><i class="fa fa-star"></i
-              ></span>
-            </div>
-            <div class="container text-center"><b>$10,.00</b></div>
-            <div class="container text-center">
-              <button class="btn btn-dark">Add to cart</button>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div class="row data"></div>
     </div>
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
